# engram

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
adapters/consolidation/decay/: Cargo.toml
adapters/hierarchy/sqlite/: Cargo.toml
adapters/ingest/: AGENTS.md  Cargo.toml
adapters/ingest/src/: classifier.rs  contract.rs  contract_entities.rs  extractor.rs  git.rs  git_detect.rs  hash.rs  ingestor.rs  lib.rs  openapi_types.rs  reconcile.rs  request.rs  scanner.rs  source_key.rs  tree_sitter_chunker.rs  yaml_safety.rs
adapters/ingest/tests/: code_symbol_ingestion.rs  contract_ingestion.rs  document_ingestion.rs  extractor.rs  graph_retraction.rs  repo_identity.rs  scanner.rs  tree_sitter_c_langs.rs  tree_sitter_chunker.rs
adapters/integration/: Cargo.toml
adapters/integration/src/: batch.rs  export_import.rs  fastembed_provider.rs  harness.rs  lib.rs  migration_service.rs  observability.rs  provenance.rs  recall.rs  recall_lanes.rs  wiring.rs
adapters/integration/tests/: associative_recall.rs  batch_ingest.rs  export_import.rs  observability.rs  provenance_query.rs  recall.rs
adapters/knowledge/inmem/: AGENTS.md  Cargo.toml
adapters/knowledge/sqlite/: Cargo.toml
adapters/memory/inmem/: AGENTS.md  Cargo.toml  README.md
adapters/sqlite/: Cargo.toml
adapters/sqlite/examples/: benchmark_sql.rs  sql_memory.rs
adapters/sqlite/src/: lib.rs
adapters/sqlite/tests/: belief_repository.rs  cue_anchors_integration.rs  hierarchy_repository.rs  knowledge_delete_ops.rs  knowledge_repository.rs  repository.rs  service.rs  vector_fastembed_bge_small.rs  vector_retrieval_index.rs  vector_sqlite_vec.rs
adapters/surreal/: Cargo.toml
adapters/surreal/src/: belief.rs  connection.rs  hierarchy.rs  knowledge.rs  lib.rs  memory.rs  util.rs  vector.rs
bindings/node/: Cargo.toml
bindings/node/src/: belief.rs  codegraph.rs  consolidation.rs  cross_file.rs  eval.rs  hierarchy.rs  ingest.rs  ingest_ops.rs  ingest_state.rs  integration.rs  knowledge.rs  knowledge_chunks.rs  knowledge_concepts.rs  knowledge_documents.rs  knowledge_entities.rs  knowledge_fusion.rs  knowledge_graph.rs  knowledge_ontology.rs  knowledge_relationships.rs  knowledge_sources.rs  lib.rs  memory.rs  provider.rs  utils.rs
codegraph/mcp-server/: Cargo.toml  README.md  install.sh
codegraph/mcp-server/src/: main.rs
codegraph/queries/: Cargo.toml
codegraph/queries/src/: lib.rs  queries.rs
core/consolidation/: Cargo.toml
core/consolidation/src/: composite.rs  lib.rs
core/consolidation/tests/: gated_apply.rs  planning.rs
core/eval/: Cargo.toml  README.md
core/eval/src/: accepted_examples.rs  architecture_coverage.rs  contract_runner.rs  lib.rs  report_summary.rs
core/eval/tests/: architecture_coverage.rs  fixture_runner.rs  report_summary.rs
core/integration/: Cargo.toml
core/integration/src/: batch.rs  capability.rs  config.rs  dto.rs  embedding.rs  export_import.rs  lib.rs  migration.rs  observability.rs  ollama_provider.rs  provenance.rs  provider.rs  recall.rs
core/integration/tests/: stub_backend.rs
core/orchestration/: Cargo.toml
core/orchestration/src/: lib.rs
core/orchestration/tests/: consolidation_dry_run.rs  consolidation_gated.rs
core/reflection/: Cargo.toml
core/reflection/src/: belief_build.rs  executor.rs  lib.rs  source.rs  synthesizer.rs
core/retrieval/: Cargo.toml
core/retrieval/src/: composer.rs  config.rs  lib.rs  ports.rs  predict.rs  reciprocal.rs  router.rs  vector_index.rs  weighted.rs
core/retrieval/tests/: composer.rs  predict.rs  reciprocal_fusion.rs  router.rs  weighted_fusion.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: lib.rs
crates/engram-core/tests/: consolidation_dry_run.rs
crates/engram-eval/: Cargo.toml  README.md
crates/engram-eval/src/: lib.rs  report_summary.rs
crates/engram-eval/tests/: fixture_runner.rs  report_summary.rs
crates/engram-ingest/: Cargo.toml
crates/engram-ingest/src/: chunker.rs  code_symbol.rs  filesystem.rs  git.rs  ingestor.rs  lib.rs  request.rs
crates/engram-ingest/tests/: code_symbol_ingestion.rs  document_ingestion.rs  filesystem_source_reader.rs  git_source_reader.rs
crates/engram-node/: Cargo.toml
crates/engram-node/src/: lib.rs
crates/engram-retrieval/: Cargo.toml
crates/engram-retrieval/src/: config.rs  lib.rs  weighted.rs
crates/engram-retrieval/tests/: weighted_fusion.rs
crates/engram-store-knowledge-memory/: Cargo.toml
crates/engram-store-knowledge-memory/src/: lib.rs
crates/engram-store-knowledge-memory/tests/: knowledge_graph_repository.rs
crates/engram-store-memory/: Cargo.toml  README.md
crates/engram-store-memory/examples/: local_memory.rs
crates/engram-store-memory/src/: belief.rs  belief_retrieval.rs  consolidation.rs  dependencies.rs  external_retrieval.rs  forget.rs  hierarchy.rs  hierarchy_retrieval.rs  knowledge.rs  knowledge_retrieval.rs  lib.rs  retrieval.rs  scope.rs  service.rs  state.rs  validation.rs  write.rs
crates/engram-store-memory/tests/: belief_repository.rs  belief_retrieval.rs  consolidation_compaction.rs  consolidation_contradiction_detection.rs  consolidation_decay.rs  consolidation_hierarchy_aggregate.rs  consolidation_hierarchy_build.rs  hierarchy_repository.rs  hierarchy_retrieval_expansion.rs  knowledge_graph_repository.rs  knowledge_repository.rs  knowledge_retrieval.rs  retrieval_indexes.rs  retrieve_context.rs  retrieve_context_fixtures.rs  write_memory.rs  write_memory_fixtures.rs
crates/engram-store-sql/: Cargo.toml  README.md
crates/engram-store-sql/examples/: sql_memory.rs
crates/engram-store-sql/src/: dependencies.rs  engine.rs  forget.rs  lib.rs  retrieval.rs  schema.rs  scope.rs  service.rs  transactional_write.rs  validation.rs  write.rs
crates/engram-store-sql/tests/: repository.rs  service.rs
crates/engram-store-vector/: Cargo.toml
examples/rust-integration/: Cargo.toml  README.md
memory/mcp-server/: Cargo.toml
(+1092 files in other folders)
