[workspace]
members = [
    "core/domain",
    "core/runtime",
    "core/memory",
    "core/knowledge",
    "core/retrieval",
    "core/orchestration",
    "core/eval",
    "adapters/ingest",
    "adapters/memory/inmem",
    "adapters/memory/sqlite",
    "adapters/knowledge/inmem",
    "adapters/knowledge/sqlite",
    "adapters/retrieval/sqlite-vec",
    "bindings/node",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
jsonschema = "0.40"
napi = "3.9.4"
napi-derive = "3.5.7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
sqlite-vec = "=0.1.9"
thiserror = "2"
