[workspace]
members = [
    "core/domain",
    "core/runtime",
    "core/memory",
    "core/knowledge",
    "core/retrieval",
    "core/orchestration",
    "core/eval",
    "core/belief",
    "core/consolidation",
    "core/reflection",
    "core/hierarchy",
    "core/integration",
    "core/graph-analytics",
    "adapters/ingest",
    "adapters/integration",
    "adapters/retrieval/tantivy-lexical",
    "adapters/retrieval/cross-encoder-rerank",
    "adapters/retrieval/associative-graph",
    "adapters/retrieval/community-summary",
    "adapters/consolidation/decay",
    "adapters/surreal",
    "adapters/sqlite",
    "bindings/node",
    "examples/rust-integration",
    "codegraph/queries",
    "codegraph/temporal",
    "codegraph/mcp-server",
    "memory/mcp-server",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
ignore = "0.4"
jsonschema = "0.40"
napi = "3.9.4"
napi-derive = "3.5.7"
rayon = "1.10"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.11.0"
sqlite-vec = "=0.1.9"
tantivy = "0.22"
thiserror = "2"
