[package]
name = "engram-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
engram-domain = { path = "../../core/domain" }
engram-knowledge = { path = "../../core/knowledge" }
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
engram-store-memory = { path = "../memory/inmem" }
futures.workspace = true
