[package]
name = "engram-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
engram-domain = { path = "../../core/domain" }
engram-knowledge = { path = "../../core/knowledge" }
futures.workspace = true
ignore.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-perl = "1.1"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-sfapex = "3.0"
tree-sitter-typescript = "0.23"

[dev-dependencies]
engram-store-knowledge-memory = { path = "../knowledge/inmem" }
engram-store-memory = { path = "../memory/inmem" }
futures.workspace = true
