[package]
name = "engram-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
engram-domain = { path = "../../core/domain" }
engram-runtime = { path = "../../core/runtime" }
# Enable the `sqlite` backend so the port impls (`Sql*`) and `EngramProvider::open`
# are available to this crate's fixtures + wiring delegate. The engine-specific
# code lives in `core/integration/src/sqlite/`; this crate keeps the conformance
# harness + fixtures (test infrastructure).
engram-integration = { path = "../../core/integration", features = ["sqlite"] }
engram-memory = { path = "../../core/memory" }
engram-knowledge = { path = "../../core/knowledge" }
engram-hierarchy = { path = "../../core/hierarchy" }
engram-belief = { path = "../../core/belief" }
engram-retrieval = { path = "../../core/retrieval" }
engram-store-sqlite = { path = "../sqlite" }
engram-store-sql = { path = "../memory/sqlite" }
engram-store-knowledge-sqlite = { path = "../knowledge/sqlite" }
engram-store-hierarchy-sqlite = { path = "../hierarchy/sqlite" }
engram-store-belief-sqlite = { path = "../orchestration/belief-sqlite" }
engram-store-vector = { path = "../retrieval/sqlite-vec" }
engram-store-lexical = { path = "../retrieval/tantivy-lexical" }
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = []
# Enables the FastEmbed EmbeddingProvider wrapper + the FastEmbed-backed vector
# recall lane (pulls model-bearing code). Forwards to the core crate's feature
# of the same name, which brings in the vector store + its fastembed-provider.
fastembed = ["engram-integration/fastembed"]
