[package]
name = "engram-store-sqlite"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Memory cell — folded in from engram-store-sql (consolidation T1):
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
engram-domain = { path = "../../core/domain" }
engram-memory = { path = "../../core/memory" }
engram-runtime = { path = "../../core/runtime" }
engram-knowledge = { path = "../../core/knowledge" }
engram-retrieval = { path = "../../core/retrieval" }
engram-core = { path = "../../core/orchestration" }
engram-hierarchy = { path = "../../core/hierarchy" }
sha2.workspace = true
# Still-facaded adapter crate (folds in T5):
engram-store-vector = { path = "../retrieval/sqlite-vec" }

[dev-dependencies]
engram-core = { path = "../../core/orchestration" }
engram-eval = { path = "../../core/eval" }
futures.workspace = true
tempfile = "3"

[features]
default = []
fastembed = ["engram-store-vector/fastembed-provider"]
