[package]
name = "engram-codegraph-queries"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
engram-domain = { path = "../../core/domain" }
engram-graph-analytics = { path = "../../core/graph-analytics" }

[dev-dependencies]
chrono.workspace = true
