[package]
name = "engram-consolidation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engram-domain = { path = "../domain" }
engram-eval = { path = "../eval" }
engram-runtime = { path = "../runtime" }
serde_json.workspace = true
