[package]
name = "engram-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engram-core = { path = "../orchestration" }
engram-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
engram-store-memory = { path = "../../adapters/memory/inmem" }
futures.workspace = true
