[package]
name = "engram-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engram-domain = { path = "../domain" }
engram-memory = { path = "../memory" }
engram-runtime = { path = "../runtime" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
engram-store-sqlite = { path = "../../adapters/sqlite" }
futures.workspace = true
