[package]
name = "engram-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-domain = { path = "../domain" }
engram-runtime = { path = "../runtime" }
engram-memory = { path = "../memory" }
engram-knowledge = { path = "../knowledge" }
engram-hierarchy = { path = "../hierarchy" }
engram-belief = { path = "../belief" }
engram-retrieval = { path = "../retrieval" }
async-trait.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2.workspace = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "json", "rustls-tls"]
optional = true

[dev-dependencies]
tempfile = "3"
chrono.workspace = true
# `futures` is a TEST-ONLY dependency here: the S7 stub-backend conformance
# proof (tests/stub_backend.rs) drives async MemoryService trait methods
# synchronously via `futures::executor::block_on`. It never enters the library
# surface or any production adapter. Notably, this crate does NOT depend on
# `engram-store-sql` — that absence is the compile-time half of the ADR-0022
# backend-parametric proof (see tests/stub_backend.rs).
futures.workspace = true

[features]
default = []
ollama = ["dep:reqwest"]
