[package]
name = "engram-reflection"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engram-domain = { path = "../domain" }
engram-belief = { path = "../belief" }
engram-consolidation = { path = "../consolidation" }
engram-runtime = { path = "../runtime" }

[dev-dependencies]
futures.workspace = true
chrono.workspace = true
