[package]
name = "engram-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engram-domain = { path = "../domain" }
engram-runtime = { path = "../runtime" }

[dev-dependencies]
chrono.workspace = true
