[package]
name = "engram-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engram-domain = { path = "../domain" }
engram-runtime = { path = "../runtime" }
serde = { workspace = true }

[dev-dependencies]
chrono.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt"] }
