[package]
name = "engram-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engram-domain = { path = "../engram-domain" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
futures.workspace = true
