[package]
name = "engram-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engram-domain = { path = "../engram-domain" }
engram-knowledge = { path = "../engram-knowledge" }
engram-memory = { path = "../engram-memory" }
engram-retrieval = { path = "../engram-retrieval" }
engram-runtime = { path = "../engram-runtime" }
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
futures.workspace = true
