[package]
name = "engram-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
engram-core = { path = "../engram-core" }
engram-domain = { path = "../engram-domain" }
sha2.workspace = true

[dev-dependencies]
engram-store-memory = { path = "../engram-store-memory" }
futures.workspace = true
