[package]
name = "engram-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engram-domain = { path = "../engram-domain" }
engram-memory = { path = "../engram-memory" }
engram-store-sql = { path = "../engram-store-sql" }
futures.workspace = true
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2.3.2"
