[package]
name = "engram-store-knowledge-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engram-domain = { path = "../engram-domain" }
engram-knowledge = { path = "../engram-knowledge" }
engram-runtime = { path = "../engram-runtime" }

[dev-dependencies]
chrono.workspace = true
futures.workspace = true
