[package]
name = "engram-store-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
engram-core = { path = "../engram-core" }
engram-domain = { path = "../engram-domain" }
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
engram-eval = { path = "../engram-eval" }
futures.workspace = true
