[package]
name = "engram-store-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
fastembed-tests = ["dep:fastembed"]

[dependencies]
async-trait.workspace = true
engram-core = { path = "../engram-core" }
engram-domain = { path = "../engram-domain" }
rusqlite.workspace = true
sqlite-vec.workspace = true

[dependencies.fastembed]
version = "5.17.2"
optional = true

[dev-dependencies]
chrono.workspace = true
futures.workspace = true
