[package]
name = "engram-store-knowledge-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
engram-domain = { path = "../../../core/domain" }
engram-knowledge = { path = "../../../core/knowledge" }
engram-runtime = { path = "../../../core/runtime" }
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
futures.workspace = true
