[package]
name = "engram-store-knowledge-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
engram-domain = { path = "../../../core/domain" }
engram-knowledge = { path = "../../../core/knowledge" }
engram-retrieval = { path = "../../../core/retrieval" }
engram-runtime = { path = "../../../core/runtime" }
futures.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
futures.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
